@@ -8606,8 +8606,24 @@
  <country>
   <_name>Estonia</_name>
    <location>
+    <_name>Kardla</_name>
+    <code>EEKA</code>
+   </location>
+   <location>
+    <_name>Kuressaare</_name>
+    <code>EEKE</code>
+   </location>
+   <location>
+    <_name>Parnu</_name>
+    <code>EEPU</code>
+   </location>
+   <location>
     <_name>Tallinn</_name>
     <code>EETN</code>
+   </location>
+   <location>
+    <_name>Tartu</_name>
+    <code>EETU</code>
    </location>
  </country>
  <country>
