@@ -147,7 +147,7 @@
 	<default>false</default>
 	<locale name="C">
 		<short>Use custom url for the radar map</short>
-		<long>If true, then retreive a radar map from a location specified by the "radar" key.</long>
+		<long>If true, then retrieve a radar map from a location specified by the "radar" key.</long>
 	</locale>
 </schema>
 <schema>
