@@ -1,3 +1,11 @@
+2004-09-20  Davyd Madeley  <davyd@madeley.id.au>
+
+	* Locations.xml.in: Added Estonian locations. Closes #152302. Patch
+	from Chris Kelso <ckelso@heliosphere.org>.
+
+	* gweather.schemas.in: Fix typo in schema. Closes #152209. Patch from
+	Chris Kelso <ckelso@heliosphere.org>.
+
 2004-09-16  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Locations: REMOVED. See bug #151506
